kubernetes/base/ai-stack/open-webui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
  namespace: cloudmart # Переносимо в неймспейс проекту
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-webui
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      containers:
      - name: open-webui
        image: ghcr.io/open-webui/open-webui:main # Сама свіжа версія
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: cloudmart
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: open-webui
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui
  namespace: cloudmart
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: openwebui.192.168.1.240.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: open-webui
            port:
              number: 80
